// Copyright 2017 Square, Inc.

syntax = "proto3";

package rce;

// Interface exported by the rce agent
service RCEAgent {
  // Start a Specific Command
  rpc StartCommand(CommandRequest) returns (CommandStatus) {}

  // Call to get the status of a particular command that may or
  // may not be currently Active on the host
  rpc GetCommandStatus(CommandID) returns (CommandStatus) {}

  // Call to get all commands currently active on rce agent
  rpc GetCommands(StartTime) returns (stream CommandID) {}

  // Stop an already Running Command. This will be an "ungraceful" kill
  rpc StopCommand(CommandID) returns (CommandStatus) {}
}

message StartTime {
  int64 StartTime = 1;
}

message CommandStatus {
  uint64       CommandID =  1;
  int64           Status =  2; // TODO: name to "State", define states in this protobuf
  string     CommandName =  3;
  int64              PID =  4;
  int64        StartTime =  5;
  int64       FinishTime =  6;
  int64         ExitCode =  7;
  repeated string   Args =  8;
  repeated string Stdout =  9;
  repeated string Stderr = 10;
  string           Error = 11;
}

message CommandID {
  uint64 CommandID = 1;
}

message CommandRequest {
  string        CommandName = 1;
  repeated string Arguments = 2;
}
